--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
       { display: "シンノスケ", output: "しんちゃん" },
 
       // 🆕 追加メンバー
-      { display: "Echidna", output: "エキ" },
-      { display: "カイ", output: "カイ" },
+      { display: "Echidna", output: "エキちゃん" },
+      { display: "カイ", output: "カイちゃん" },
     ];
 
     // グリッド生成
